# az-scout-plugin-batch-sku

./: README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  publish.yml
src/az_scout_batch_sku/: routes.py  tools.py
src/az_scout_batch_sku/static/css/: batch-sku.css
src/az_scout_batch_sku/static/html/: batch-sku-tab.html
src/az_scout_batch_sku/static/js/: batch-sku-tab.js
src/az_scout_plugin_batch_sku/: __init__.py  routes.py  tools.py
src/az_scout_plugin_batch_sku/static/css/: batch-sku.css
src/az_scout_plugin_batch_sku/static/html/: batch-sku-tab.html
src/az_scout_plugin_batch_sku/static/js/: batch-sku-tab.js
tests/: conftest.py  test_plugin.py  test_routes.py  test_tools.py
